# pyfaidx

./: .coveragerc  .gitignore  .travis.yaml  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  codecov.yml  dev-requirements.txt  pyfaidx.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  testenv.ipynb  tox.ini
.github/workflows/: main.yml  pypi.yml
docs/: Makefile  conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: index.html  objects.inv  search.html  searchindex.js
docs/source/: conf.py
pyfaidx/: __init__.py  bedmask.py  cli.py  utilities.py
scripts/: benchmark.py  pyfaidx-fetch.py
tests/: benchmark.py  test_FastaRecord.py  test_FastaRecord_iter.py  test_FastaVariant.py  test_Fasta_bgzip.py  test_Fasta_integer_index.py  test_Fasta_synchronization.py  test_MutableFastaRecord.py  test_Path.py  test_bgzf_first_access.py  test_bgzfblock.py  test_bio_seqio.py  test_faidx.py  test_feature_bounds_check.py  test_feature_default_seq.py  test_feature_indexing.py  test_feature_key_function.py  test_feature_read_ahead_buffer.py  test_feature_sequence_as_raw.py  test_feature_spliced_seq.py  test_feature_split_char.py  test_fsspec.py  test_genome.py  test_long_fasta_entry.py  test_sequence_class.py  test_wrap_sequence_newline.py
tests/data/: chr17.hg19.part.fa  chr22.vcf.gz.tbi  download_gene_fasta.py  gene.bed12  gene.bed12.fasta  genes.fasta  genes.fasta.fai  genes.fasta.lower  issue_141.fasta  issue_83.fasta  long_line.fasta  malformed.bed  regions.bed  short_line.fasta
tests/data/expect/: genes.fasta.fai.samtools
